--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ code {
 }
 
 .btn {
-  max-width: 220px;
+  max-width: 230px;
   margin: 2rem;
   border-radius: 5px;
   padding: 10px 25px;
@@ -201,4 +201,11 @@ code {
   border-top: 4px solid #f3f3f3;
   padding-top: 15px;
   margin-top: 30px;
+}
+
+.spinner-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
 }
